Fix tool menu button alignment in rtl mode

--- a/src/assets/css/tools.css
+++ b/src/assets/css/tools.css
@@ -165,8 +165,10 @@
 }
 
 .tools-menu-button-icon {
-  padding-right: 15px;
+  /* padding-right: 15px; */
+  padding-inline-end: 15px;
   max-width: 30px;
+  align-content: center;
 }
 
 .tools-menu-button:hover {
